// Copyright 2025 Cisco Systems, Inc. and its affiliates
// SPDX-License-Identifier: Apache-2.0

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto3";

package outshift.identity.service.v1alpha1;

import "google/protobuf/timestamp.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/outshift/identity-service/api/server/outshift/identity/service/v1alpha1;identity_service_sdk_go";

message Badge {
  optional VerifiableCredential verifiable_credential = 1;

  optional string app_id = 2;
}

// BadgeClaims represents the content of a Badge VC defined [here]
//
// [here]: https://spec.identity.agntcy.org/docs/vc/intro/
message BadgeClaims {
  // The ID as defined [here]
  //
  // [here]: https://www.w3.org/TR/vc-data-model/#credential-subject
  optional string id = 1;

  // The content of the badge
  optional string badge = 2;
}

// CredentialSchema represents the credentialSchema property of a Verifiable Credential.
// more information can be found [here]
//
// [here]: https://www.w3.org/TR/vc-data-model-2.0/#data-schemas
message CredentialSchema {
  // Type specifies the type of the file
  optional string type = 1;

  // The URL identifying the schema file
  optional string id = 2;
}

// CredentialStatus represents the credentialStatus property of a Verifiable Credential.
// more information can be found [here]
//
// [here]: https://www.w3.org/TR/vc-data-model-2.0/#status
message CredentialStatus {
  // The URL identifying the schema file
  optional string id = 1;

  // Type specifies the type of the file
  optional string type = 2;

  // The creation date and time of the status
  optional .google.protobuf.Timestamp created_at = 3;

  // The value of the purpose for the status entry
  optional CredentialStatusPurpose purpose = 4;
}

message ErrorInfo {
  optional string reason = 1;

  optional string message = 2;
}

// A data integrity proof provides information about the proof mechanism,
// parameters required to verify that proof, and the proof value itself.
message Proof {
  // The type of the proof
  optional string type = 1;

  // The proof purpose
  optional string proof_purpose = 2;

  // The proof value
  optional string proof_value = 3;
}

// DataModel represents the W3C Verifiable Credential Data Model defined [here]
//
// [here]: https://www.w3.org/TR/vc-data-model/
message VerifiableCredential {
  // https://www.w3.org/TR/vc-data-model/#contexts
  repeated string context = 1;

  // https://www.w3.org/TR/vc-data-model/#dfn-type
  repeated string type = 2;

  // https://www.w3.org/TR/vc-data-model/#issuer
  optional string issuer = 3;

  // https://www.w3.org/TR/vc-data-model/#credential-subject
  optional BadgeClaims credential_subject = 4;

  // https://www.w3.org/TR/vc-data-model/#identifiers
  optional string id = 5;

  // https://www.w3.org/TR/vc-data-model/#issuance-date
  optional string issuance_date = 6;

  // https://www.w3.org/TR/vc-data-model/#expiration
  optional string expiration_date = 7;

  // https://www.w3.org/TR/vc-data-model-2.0/#data-schemas
  repeated CredentialSchema credential_schema = 8;

  // https://www.w3.org/TR/vc-data-model-2.0/#status
  repeated CredentialStatus credential_status = 9;

  // https://w3id.org/security#proof
  optional Proof proof = 10;
}

// The result returned from the verification process defined [here]
//
// [here]: https://www.w3.org/TR/vc-data-model-2.0/#verification
message VerificationResult {
  // A boolean status
  optional bool status = 1;

  // A conforming document which represents the Verifiable Credential
  optional VerifiableCredential document = 2;

  // The media type of the Verifiable Credential (ex: application/vc)
  optional string media_type = 3;

  // The controller of the verification method associated with the securing mechanism,
  // usually it represents the issuer.
  optional string controller = 4;

  // A controlled identifier document that is associated with the verification method
  // used to verify the securing mechanism (i,e the DID)
  optional string controlled_identifier_document = 5;

  // A list represents zero or more warnings generated by the verification process
  repeated ErrorInfo warnings = 6;

  // A list represents zero or more errors generated by the verification process
  repeated ErrorInfo errors = 7;
}

// The content of the Credential.
// Multiple content types can be supported: AgentBadge, etc.
enum BadgeType {
  // Unspecified Content Type.
  BADGE_TYPE_UNSPECIFIED = 0;
  // AgentBadge Content Type.
  // The Agent content representation following a defined schema
  // OASF: https://schema.oasf.agntcy.org/schema/objects/agent
  // Google A2A: https://github.com/google/A2A/blob/main/specification/json/a2a.json
  BADGE_TYPE_AGENT_BADGE = 1;
  // McpBadge Content Type.
  // The MCP content representation following a defined schema
  // The schema is defined in the MCP specification as the MCPServer type
  BADGE_TYPE_MCP_BADGE = 2;
}

// The purpose of the status entry
enum CredentialStatusPurpose {
  // Unspecified status purpose
  CREDENTIAL_STATUS_PURPOSE_UNSPECIFIED = 0;
  // Used to cancel the validity of a verifiable credential.
  // This status is not reversible.
  CREDENTIAL_STATUS_PURPOSE_REVOCATION = 1;
}
