// Copyright 2025 Cisco Systems, Inc. and its affiliates
// SPDX-License-Identifier: Apache-2.0

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto3";

package outshift.identity.service.v1alpha1;

import "google/api/field_behavior.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/outshift/identity-service/api/server/outshift/identity/service/v1alpha1;identity_service_sdk_go";

// An Identity API Key.
message ApiKey {
  optional string api_key = 1;
}

// Duo IdP Settings
message DuoIdpSettings {
  optional string hostname = 1;

  optional string integration_key = 2;

  optional string secret_key = 3;
}

// Issuer Settings
message IssuerSettings {
  // A unique identifier for the Issuer.
  // This is typically the Issuer's ID in the Identity.
  optional string issuer_id = 1 [(.google.api.field_behavior) = OUTPUT_ONLY];

  // The type of the IdP.
  optional IdpType idp_type = 3 [(.google.api.field_behavior) = REQUIRED];

  // Settings for the Duo Identity Provider.
  optional DuoIdpSettings duo_idp_settings = 4 [(.google.api.field_behavior) = OPTIONAL];

  // Settings for the Okta Identity Provider.
  optional OktaIdpSettings okta_idp_settings = 5 [(.google.api.field_behavior) = OPTIONAL];

  // Settings for the Ory Identity Provider.
  optional OryIdpSettings ory_idp_settings = 6 [(.google.api.field_behavior) = OPTIONAL];
}

// Okta IdP Settings
message OktaIdpSettings {
  optional string org_url = 1;

  optional string client_id = 2;

  optional string private_key = 3;
}

// Ory IdP Settings
message OryIdpSettings {
  optional string project_slug = 1;

  optional string api_key = 2;
}

// Identity Settings
message Settings {
  // An API Key for the Identity Service.
  optional ApiKey api_key = 1 [(.google.api.field_behavior) = OUTPUT_ONLY];

  // Settings for the Issuer.
  optional IssuerSettings issuer_settings = 2 [(.google.api.field_behavior) = OPTIONAL];
}

// Type
enum IdpType {
  // Unspecified Envelope Type.
  IDP_TYPE_UNSPECIFIED = 0;
  // Idp Type Duo.
  IDP_TYPE_DUO = 1;
  // Idp Type Okta.
  IDP_TYPE_OKTA = 2;
  // Idp Type Ory.
  IDP_TYPE_ORY = 3;
  // Idp Type Self.
  IDP_TYPE_SELF = 4;
}
